apps/teslamate/teslamate/networkpolicies/egress-teslamate.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: egress-teslamate
  namespace: teslamate
spec:
  selector: app == 'teslamate'
  types:
    - Egress
  egress:
    - action: Allow
      protocol: TCP
      destination:
        selector: app == 'teslamate-postgres'
        ports:
          - 5432
    - action: Allow
      protocol: TCP
      destination:
        ports:
          - 443
